# doit

./: .gitignore  CLAUDE.md  GEMINI.md  GEMINI_STYLE_INTERFACE.md  README.md  RELEASE_NOTES_0.1.1.md  main.py  pyproject.toml  test_autocomplete.py  test_cli_manual.py
.claude/: settings.local.json
.specify/memory/: constitution.md
docs/design/: autocomplete.md  command-templates.md
history/prompts/001-todo-cli-app/: 0001-create-todo-cli-app-specification.spec.prompt.md  0002-create-implementation-plan-for-todo-cli.plan.prompt.md  0003-generate-task-breakdown-for-todo-cli.tasks.prompt.md  0004-todo-cli-app-implementation.green.prompt.md  0005-consolidate-cli-and-organize-project-structure.refactor.prompt.md
history/prompts/002-todo-web-app/: 0001-create-phase-ii-todo-web-app-spec.spec.prompt.md  0002-clarify-phase-ii-todo-web-app-spec.spec.prompt.md  0003-specify-phase-2-web-app.spec.prompt.md  0004-plan-phase-2-web-app.plan.prompt.md  0005-tasks-phase-2-web-app.tasks.prompt.md
history/prompts/constitution/: 0001-create-doit-todo-app-constitution.constitution.prompt.md  0002-rewrite-constitution-phase-2-web-app.constitution.prompt.md
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-app/checklists/: requirements.md
specs/002-todo-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/doit/: __init__.py
tests/: conftest.py
tests/integration/: test_cli_commands.py
tests/unit/: test_app.py  test_memory_storage.py  test_task_model.py  test_task_service.py
(+16 files in other folders)
